kubernetes/apps/network/internal/remote-services/services/readarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.1/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-readarr
  namespace: network
spec:
  ports:
    - port: 8787
      protocol: TCP
      targetPort: 8787
      name: http
  type: ExternalName
  externalName: zeus.nas.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.1/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-readarr
  namespace: network
  annotations:
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "readarr"
    gethomepage.dev/description: "Book Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/readarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "readarr.png"
    gethomepage.dev/widget.type: "readarr"
    gethomepage.dev/widget.url: http://zeus.nas.internal:8787/readarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_READARR_KEY}"
    gethomepage.dev/siteMonitor: http://zeus.nas.internal:8787
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /readarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-readarr
              port:
                number: 8787
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
